# library

./: .env  .env.dev  .gitignore  README.md  pyproject.toml
library_django/: db.sqlite3  manage.py
library_django/book/: admin.py  models.py  urls.py  views.py
library_django/book/migrations/: 0001_create_author_model.py  0001_create_models.py  0002_change_onhandbook_issuebook_models.py  0002_create_book_model.py  0003_change_issuebook_models.py  0003_create_issuebook_model.py  0004_change_issuebook_models.py  0004_update_issuebook_model.py  0005_change_issuebook_model.py  0006_change_issuebook_book2.py  0006_change_issuebook_model.py  0007_change_issuebook_model.py  0008_change_onhandbook_model.py  0009_change_onhandbook_model.py  0010_change_book_issuebook_models.py  0011_change_onhandbook_model.py  0012_change_issuebook_onhandbook_models.py
library_django/book/templates/: create_book_on_hand.html  delete_book_on_hand.html  form_for_create_issue_book.html  form_for_update_issue_book.html  get_book.html  list_books_in_library.html  list_books_on_hand.html  start_page.html  start_page_book.html  success.html
library_django/library_django/: asgi.py  settings.py  urls.py  wsgi.py
library_django/reader/: admin.py  manager.py  models.py  urls.py  views.py
library_django/reader/migrations/: 0001_create_models.py  0001_create_user_model.py  0002_create_reader_model.py  0003_change_user_model.py  0004_create_author_model.py
library_django/reader/templates/: create_user.html  list_readers.html
